# pks_sem2_pr1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  main.cpp
qml/: Main.qml
src/: ArrayModel.cpp  ArrayModel.h  BubbleSort.cpp  BubbleSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  SortingController.cpp  SortingController.h  SortingStrategy.h  main.cpp
tests/: CMakeLists.txt  scenario1.cpp  scenario2.cpp  test_sorting.cpp
